--- a/Bank_system.ipynb
+++ b/Bank_system.ipynb
@@ -40,7 +40,7 @@
         "#### **Deposit operations**\n",
         "####It must be possible to deposit positive amounts to my bank account. Version 1 of the project only works with 1 user, so there is no need to worry about identifying which is the branch and bank account number. All deposits must be stored in a variable and displayed in the statement operation.\n",
         "\n",
-        "#### **Withdrawal operations**\n",
+        "#### **Withdrawl operations**\n",
         "####The system must allow 3 daily withdrawals with a maximum limit of R$ 500.00 per withdrawal. If the user does not have a balance in the account, the system must display a message stating that it will not be possible to withdraw the money due to lack of balance. All withdrawals must be stored in a variable and displayed in the statement operation.\n",
         "\n",
         "#### **Transaction operations**\n",
